<resources>
    <string name="notification_default_channel" translatable="false">com.hellowo.alarm.default</string>
    <string name="in_app_license" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAyY7awWGkfP4KgO2stB0K2ysfCmKbubc/9TBFaNivq1ihuTfndycMPb+gzQ9lzxtYFw3IHiS+pBvi86b1aM6CDsKQXpGlVepXeG8sy8vdmNXwcwDFr5lftWk944T96BwK1VyrA2NVlXdk8e9+MrTDrGfZd+gXrOxHexr6AalhqgMtcfS1/eDmKOg/6vRM8SNtu03k7DjEkIUKLHlnPL1KHW0WWqZ7z4iR1lfHShbgiBXjtHN+zL2J0AaIUelvTAt5ctAmIkDYEbYdrGXGZC+FqCBz+1GgPShhE1yLLI0lswe9Bhle54lNMTSYGC20cxtoJxdQGRK5jiVTE2yWP469/QIDAQAB</string>
    <string name="app_name">MoonRecords</string>
    <string name="cancel">Cancel</string>
    <string name="plz_wait">Please wait…</string>
    <string name="confirm">Confirm</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="empty">Empty</string>
    <string name="untitle">No content</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="type">Type</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="visible">Visible</string>
    <string name="unvisible">Invisible</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="weekNum">%1$s Weeks</string>
    <string name="setting">Settings</string>
    <string name="add_option">More information</string>
    <string name="detail_info">Other information</string>
    <string name="memo">Memo</string>
    <string name="main_text">Description</string>
    <string name="location">Location</string>
    <string name="set_time">Time setting</string>
    <string name="alarm">Alarm</string>
    <string name="enter_memo">Please enter your text here</string>
    <string name="set_alarm">Notification settings</string>
    <string name="and_others">and %1$s other</string>
    <string name="counts">%1$s</string>
    <string name="basic_info">Basic info</string>
    <string name="alarm_at_time">Event day</string>
    <string name="alarm_at_9h">9 am on the day</string>
    <string name="alarm_at_12h">Noon on the day</string>
    <string name="alarm_at_18h">6pm on the same day</string>
    <string name="alarm_at_b30m">30 minutes before</string>
    <string name="alarm_at_b1h">1 hour before</string>
    <string name="alarm_at_b1d">1 day before</string>
    <string name="alarm_at_b1w">1 week before</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="no_repeat">No repeat</string>
    <string name="daily">Every day</string>
    <string name="weekly">Every week</string>
    <string name="monthly">Every month</string>
    <string name="yearly">Every year</string>
    <string name="some_min">%1$s minutes</string>
    <string name="some_hour">%1$s hours</string>
    <string name="some_date">%1$s days</string>
    <string name="some_week">%1$s weeks</string>
    <string name="some_month">%1$s months</string>
    <string name="some_year">%1$s years</string>
    <string name="daily_interval">Repeat every %1$s days</string>
    <string name="weekly_interval">Repeat %2$s every %1$s week</string>
    <string name="monthly_interval">Every month on day %1$s</string>
    <string name="monthly_w_interval">Every month on the %1$s %2$s</string>
    <string name="advanced_setting">Advenced settings</string>
    <string name="until">until %1$s</string>
    <string name="from">from %1$s</string>
    <string name="to">to %1$s</string>
    <string name="passed_alarm">Past notification</string>
    <string name="ring_alarm_at_time">%1$s notification</string>
    <string name="repeat">Repeat</string>
    <string name="set_until_date">Set end date</string>
    <string name="repeat_save">Edit repeat %1$s</string>
    <string name="repeat_delete">Delete repeat %1$s</string>
    <string name="how_apply">How to apply?</string>
    <string name="apply_only">Applies only to this %1$s</string>
    <string name="apply_after">Apply to all %1$s after including this %1$s</string>
    <string name="apply_all">All apply</string>
    <string name="date_of_total">%1$s day</string>
    <string name="drawing">Handwriting</string>
    <string name="calendar_settings">Calendar style setting</string>
    <string name="add">Add</string>
    <string name="tag">Tag</string>
    <string name="enter_tag">Tag name</string>
    <string name="no_tag">No tags</string>
    <string name="total_count">%1$s total</string>
    <string name="delete_tag_sub">The tag will be deleted from all records (%1$s total) with this tag attached.</string>
    <string name="keep">Keep</string>
    <string name="attachment">Attachment</string>
    <string name="edit_template">Edit</string>
    <string name="show_in_calendar">Post to Calendar</string>
    <string name="delete_template">Are you sure you want to delete this template?</string>
    <string name="delete_something">Delete %1$s</string>
    <string name="template_title">Template title</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="contents_example">Title</string>
    <string name="add_new">Add new</string>
    <string name="create_folder">Create folder</string>
    <string name="enter_folder_name">Please enter a folder title</string>
    <string name="select_date">Select date</string>
    <string name="invalid_info">Incorrect information</string>
    <string name="saved">Saved</string>
    <string name="today">Today</string>
    <string name="schedule">Schedule</string>
    <string name="first_text_1">Blurry records is</string>
    <string name="first_text_2">Than a clear memory</string>
    <string name="first_text_3">More valuable</string>
    <string name="sign_in_with_google">S T A R T</string>
    <string name="logo_text">Diary</string>
    <string name="logo_text_2">R\ne\nc\no\nr\nd\n\nd\na\ni\nl\ny</string>
    <string name="logo_text_3">D\ni\na\nr\ny</string>
    <string name="logo_text_w">Pleasure to record</string>
    <string name="init_setting_script_0">Nice to meet you! %1$s.\nWhat kind of diary do you need?\nPlease select your desired diary configuration.</string>
    <string name="select_os_calendar">Import external calendar</string>
    <string name="search_tag">Tag selection</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_folder_sub">All records (%1$s total) stored in this folder will be deleted.\nAre you sure you want to delete it?</string>
    <string name="search_title_location_memo">Search for titles, places, and notes</string>
    <string name="startdow">Start day</string>
    <string name="startdow_sub">Please select the day the week starts</string>
    <string name="week_display">Holidays, weekend colors</string>
    <string name="lunar_display">Lunar calendar</string>
    <string name="account_settings">Account settings</string>
    <string name="logout">Logout</string>
    <string name="ask_logout">Would you like to log out?</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="big">Big</string>
    <string name="export">Export to .txt file [Beta]</string>
    <string name="holi_display">Holiday, anniversary signs</string>
    <string name="kr">Korea</string>
    <string name="jp">Japan</string>
    <string name="holi_display_sub">Set the country to display public holidays</string>
    <string name="cal_text_size">Record font size</string>
    <string name="outside_month">Display previous, next month</string>
    <string name="connect_os_calendar">OS calendar reference</string>
    <string name="countdown">Countdown</string>
    <string name="planning">Planning</string>
    <string name="write_everything">What to record?</string>
    <string name="clear_time">Turn off time setting</string>
    <string name="one_day">One day</string>
    <string name="duration_day">%1$s total days</string>
    <string name="duration_min">Total %1$s minutes</string>
    <string name="duration_hour">%1$s total hours</string>
    <string name="duration_min_hour">Total %1$s hours %2$s minutes</string>
    <string name="edit">Edit</string>
    <string name="tasking">Task</string>
    <string name="checkbox">Checkbox</string>
    <string name="checklist">Checklist</string>
    <string name="percentage">Percentage</string>
    <string name="long_click_to_show_explain">Long tap on each item for explanation</string>
    <string name="deadline">Due</string>
    <string name="photo">Photo</string>
    <string name="weblink">Web link</string>
    <string name="shedule">Schedule</string>
    <string name="delete_shedule_sub">Remove schedule information</string>
    <string name="weblink_sub">Please enter your website address</string>
    <string name="motto">Motto</string>
    <string name="motto_sample">Wisdom is,\nwhen you think of it,\nyou just record</string>
    <string name="about_us">About Us</string>
    <string name="search">Search</string>
    <string name="evaluation">Evaluate app</string>
    <string name="send_email">Email to Developer</string>
    <string name="vote_to_new_feature">Voting for new features</string>
    <string name="evaluate_text">Interest and support for developers is always a big boost :)</string>
    <string name="email_text">If you have any problems, please email us here</string>
    <string name="vote_text">\'MoonRecords\' is an app created with users.\nThe features that have received the most votes are developed first.</string>
    <string name="help">Help</string>
    <string name="no_records">There is no record for this day</string>
    <string name="no_records_in_this_folder">There are no records in the library</string>
    <string name="delete_checkbox_sub">Do you want to remove the check box information?</string>
    <string name="delete_deadline_sub">Would you like to lift the deadline?</string>
    <string name="delete_percentage_sub">Should I delete achievements?</string>
    <string name="premium">Premium</string>
    <string name="premium_function">This feature is a premium feature</string>
    <string name="premium_sub">Premium Edition</string>
    <string name="premium_dlg_sub">Explore and subscribe to the various features of the premium edition.</string>
    <string name="add_checklist">Add checklist</string>
    <string name="edit_item">Edit item</string>
    <string name="edit_title">Item name</string>
    <string name="delete_item">Delete item</string>
    <string name="lunar_repeat">Repeat lunar calendar</string>
    <string name="dow_display">Day of the week</string>
    <string name="weekline_display">Weekly border display</string>
    <string name="enter_here">Please enter here</string>
    <string name="delete_sub">Are you sure you want to delete?</string>
    <string name="calendar">Calendar</string>
    <string name="folder">Folder</string>
    <string name="check_option">Display completed records</string>
    <string name="check_option_0">Default</string>
    <string name="check_option_1">Blurred</string>
    <string name="check_option_2">Delete line</string>
    <string name="check_option_3">Delete line and blur</string>
    <string name="display_settings">Interface</string>
    <string name="hide_in_calendar">Hide from calendar</string>
    <string name="record">Record</string>
    <string name="deleted">Deleted</string>
    <string name="move_record">Move Record</string>
    <string name="to_calendar">Move to Calendar</string>
    <string name="change_folder">Change your library</string>
    <string name="change_date">Date change</string>
    <string name="set_date">Specify the date</string>
    <string name="custom_time">Custome time</string>
</resources>