<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/dailyBtn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/regular"
            android:text="@string/daily"
            android:background="@drawable/primary_rect_fill_radius_1"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/weeklyBtn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:gravity="center"
            android:textColor="@color/secondaryText"
            android:fontFamily="@font/thin"
            android:text="@string/weekly"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/monthlyBtn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:gravity="center"
            android:textColor="@color/secondaryText"
            android:fontFamily="@font/thin"
            android:text="@string/monthly"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/yearlyBtn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:gravity="center"
            android:textColor="@color/secondaryText"
            android:fontFamily="@font/thin"
            android:text="@string/yearly"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

    <TextView
        android:id="@+id/advancedBtn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_line"
        android:textSize="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/secondaryText"
        android:fontFamily="@font/thin"
        android:text="@string/advanced_setting"/>

    <LinearLayout
        android:id="@+id/advancedLy"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/weeklyLy"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sunCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/sun"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

            <TextView
                android:id="@+id/monCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/mon"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

            <TextView
                android:id="@+id/tueCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/tue"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

            <TextView
                android:id="@+id/wedCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/wed"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

            <TextView
                android:id="@+id/thuCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/thu"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

            <TextView
                android:id="@+id/friCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/fri"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

            <TextView
                android:id="@+id/satCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/secondaryText"
                android:fontFamily="@font/thin"
                android:text="@string/sat"
                android:gravity="center"
                android:background="@drawable/normal_rect_stroke"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/intervalLy"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/intervalEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/normal_rect_stroke"
                android:fontFamily="@font/thin"
                android:gravity="center"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:text="1"
                android:textColor="@color/primaryText"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/intervalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/thin"
                android:text="@string/daily_interval"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/monthlyLy"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/monthlyCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/normal_rect_stroke"
                android:tint="@color/white"
                android:padding="7dp"
                android:fontFamily="@font/thin"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/secondaryText"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/monthlyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/thin"
                android:text="@string/monthly_interval"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/monthlyWLy"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/monthlyWCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/normal_rect_stroke"
                android:tint="@color/white"
                android:padding="7dp"
                android:fontFamily="@font/thin"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/secondaryText"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/monthlyWText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/thin"
                android:text="@string/monthly_w_interval"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/untilCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/primary_rect_fill_radius_1"
                android:tint="@color/white"
                android:src="@drawable/done"
                android:padding="7dp"
                android:fontFamily="@font/thin"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/secondaryText"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/untilText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12dp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/thin"
                android:text="@string/set_until_date"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/untilDateText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12dp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/thin"
                android:text="2018.10.19"
                android:background="@drawable/normal_rect_stroke"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>